<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/manage"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/baseline_add_shopping_cart_black_18dp"
            android:title="@string/shopping_cart"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
    <item android:title="@string/peta">
        <menu>
            <item
                android:id="@+id/nav_map"
                android:title="@string/maps"
                android:icon="@drawable/baseline_map_black_18dp"/>
            <item
                android:id="@+id/nav_subway"
                android:title="@string/subway"
                android:icon="@drawable/baseline_subway_black_18dp"/>
            <item
                android:id="@+id/nav_hotel"
                android:title="@string/hotel"
                android:icon="@drawable/baseline_hotel_black_18dp"/>
        </menu>
    </item>

</menu>
